# AI_literacy

./: README.md  package-lock.json  package.json
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/: main.py
backend/src/components/: news_content.py  scheduler.py  test3.py
backend/src/database/: conn.py  crud.py  db_models.py
backend/src/models/: models.py
backend/src/router/: __init__.py  llm.py  login.py  profile.py  register.py  score_dashboard.py
backend/src/security/: hash_password.py
backend/tests/: test_login.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Footer.js  SummaryPage.js
frontend/src/pages/: Home.js  LoginPage.js  Profile.js  SignUpPage.js  Summaries.js
